--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8080
 # MySQL database connection strings
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.url=jdbc:mysql://localhost:3306/opensift?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://172.30.132.122:3306/mysql?createDatabaseIfNotExist=true
 
 # JPA property settings
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
