user name and password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
 # MySQL database connection strings
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://mysql:3306/mysql?createDatabaseIfNotExist=true
+spring.datasource.username=mysql
+spring.datasource.password=mysql
+spring.datasource.url=jdbc:mysql://172.30.132.122:3306/mysql?createDatabaseIfNotExist=true
 
 # JPA property settings
 spring.jpa.hibernate.ddl-auto=update
