--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 # MySQL database connection strings
 spring.datasource.username=mnmr
 spring.datasource.password=password
-spring.datasource.url=jdbc:mysql://172.30.253.16:3306/mnmr?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/mnmr?createDatabaseIfNotExist=true
 
 # JPA property settings
 spring.jpa.hibernate.ddl-auto=update
